--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,92 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@font-face {
+  font-family: "Lucida Sans";
+  src: local("Lucida Sans"), url(./fonts/Lucida%20Sans.ttf) format("truetype");
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@font-face {
+  font-family: "Lucida Grande";
+  src: local("Lucida Grande"),
+    url(./fonts/LucidaGrandeBold.ttf) format("truetype");
+}
+
+@font-face {
+  font-family: "Interstate";
+  src: local("Interstate"),
+    url(./fonts/Interstate-regular.ttf) format("truetype");
+}
+
+html,
+body {
+  font-size: 62.5%;
+  margin: 0;
+  font-family: "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "Garuda",
+    "Verdana", "Tahoma", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f2f2f2;
+}
+a {
+  color: #fff;
+  text-decoration: none;
+}
+button {
+  font-size: 1.4rem;
+  font-weight: 100;
+  color: #fff;
+  border: none;
+  padding: 0.2rem 1.6rem;
+  background-color: #f50;
+  border-radius: 0.4rem;
+  outline: none;
+  height: 3rem;
+  line-height: 2.4rem;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", "Geneva", "Verdana", sans-serif;
+}
+
+button:hover {
+  cursor: pointer;
+}
+.hero__container {
+  width: 1080px;
+  margin: auto;
+  display: flexbox;
+  position: relative;
+  background-color: #fff;
+  height: 100vmin;
+}
+@media screen and (max-width: 1079px) {
+  .hero__container {
+    width: 960px;
+  }
+}
+
+.hero__container img {
+  max-width: 100%;
+  border-top: solid 4px #f50;
+}
+
+input[type="submit"] {
+  margin-left: -50px;
+  height: 20px;
+  width: 50px;
+}
+.createAcc {
+  background-color: #f50;
+}
+
+.signIn {
+  background-color: transparent;
+  border: solid 0.1rem #fff;
+  margin-right: 1rem;
+}
+
+.creators {
+  background-color: transparent;
+  padding-left: 1rem;
+}
+
+.upload {
+  height: 4.4rem;
+  padding: 0 2.6rem;
 }
