--- a/src/components/SignIn.module.css
+++ b/src/components/SignIn.module.css
@@ -1,4 +1,7 @@
 .signIn {
+  display: flex;
+  justify-content: space-between;
+  width: 35rem;
   position: absolute;
   top: 2.4rem;
   right: 3rem;
