--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,35 +1,41 @@
 button {
   font-size: 1.4rem;
   font-weight: 100;
-  color: #fff;
+  color: #f2f2f2;
   border: none;
-  background-color: #f50;
   border-radius: 0.4rem;
   outline: none;
   line-height: 2.4rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", "Geneva", "Verdana", sans-serif;
+  cursor: pointer;
 }
-.orange {
+
+.primary {
   background-color: #f50;
+}
+
+.secondary {
+  background-color: transparent;
+  border: 1px solid #f2f2f2;
+}
+
+.secondary:hover {
+  border-color: #fff;
+  color: #fff;
 }
 
 .transparent {
   background-color: transparent;
 }
 
-.whiteBorder {
-  border: solid 0.1rem #fff;
-}
-.noBorder {
-  border: none;
-}
 .medium {
   height: 3rem;
   padding: 0.2rem 1.6rem;
 }
 
-.big {
+.large {
   height: 4.4rem;
   padding: 0 2.6rem;
+  font-size: 1.6rem;
 }
