--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -1,3 +1,7 @@
 .hero {
   width: 100%;
+  height: 45rem;
+  background-image: url("../images/hero.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
 }
