--- a/src/components/TrendingTracks.module.css
+++ b/src/components/TrendingTracks.module.css
@@ -14,3 +14,9 @@
   color: #666;
   margin-bottom: 2rem;
 }
+.title {
+  font-family: "Interstate";
+  font-size: 2.6rem;
+  color: #666;
+  margin-bottom: 4rem;
+}
