--- a/src/components/Button.module.css
+++ b/src/components/Button.module.css
@@ -1,40 +1,32 @@
 button {
   font-size: 1.4rem;
   font-weight: 100;
+  color: #f2f2f2;
   border: none;
   border-radius: 0.4rem;
   outline: none;
   line-height: 2.4rem;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", "Geneva", "Verdana", sans-serif;
-}
-button:hover {
   cursor: pointer;
 }
 
-.primary--solid {
-  background-color: var(--primary);
-  color: var(--off-white);
-}
-.secondary--solid {
-  background-color: transparent;
-  color: var(--off-white);
+.primary {
+  background-color: #f50;
 }
 
-.secondary--outline {
+.secondary {
   background-color: transparent;
-  border: 2px solid var(--off-white);
-  color: var(--off-white);
-}
-.secondary--outline:hover {
-  border: 2px solid var(--white);
-  color: var(--white);
-  border: 2px solid var(--white);
+  border: 1px solid #f2f2f2;
 }
 
-.no-padding {
-  height: 3rem;
-  padding: 0.2rem 0;
+.secondary:hover {
+  border-color: #fff;
+  color: #fff;
+}
+
+.transparent {
+  background-color: transparent;
 }
 
 .medium {
@@ -46,4 +38,9 @@ button:hover {
   height: 4.4rem;
   padding: 0 2.6rem;
   font-size: 1.6rem;
+}
+
+.no-padding {
+  height: 3rem;
+  padding: 0.2rem 0;
 }
