--- a/src/components/TrendingTrack.module.css
+++ b/src/components/TrendingTrack.module.css
@@ -9,11 +9,16 @@
   font-family: "Interstate";
   font-size: 1.4rem;
   color: #333;
-  margin-bottom: 4rem;
+  padding: 0.6rem 0 0.4rem;
+  width: 100%;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 .user {
   font-size: 1.2rem;
   color: #999;
+  margin-bottom: 21px;
 }
 .user:hover {
   color: #666;
@@ -22,10 +27,10 @@
   display: flex;
   justify-content: center;
   position: absolute;
-  top: 6rem;
+  top: 34%;
   left: 34%;
-  width: 6rem;
-  height: 6rem;
+  width: 32%;
+  height: 32%;
   border-radius: 50%;
   background-color: #f50;
 }
@@ -47,7 +52,6 @@
 }
 .buttonContainer {
   width: 15%;
-  height: 26rem;
   padding-bottom: 12px;
   position: relative;
 }
