--- a/src/components/Hero.module.css
+++ b/src/components/Hero.module.css
@@ -4,4 +4,5 @@
   background-image: url("../images/hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
 }
