--- a/src/components/SignIn.module.css
+++ b/src/components/SignIn.module.css
@@ -2,7 +2,19 @@
   display: flex;
   justify-content: space-between;
   width: 32rem;
-  position: absolute;
-  top: 2.4rem;
-  right: 3rem;
+}
+
+.topSection {
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+  padding: 2.2rem 3.4rem;
+}
+.logoContainer {
+  display: flex;
+  align-items: center;
+}
+.logoText img {
+  height: 2.2rem;
+  padding-left: 4px;
 }
