--- a/src/components/SearchBar.module.css
+++ b/src/components/SearchBar.module.css
@@ -1,9 +1,10 @@
 .searchBar {
   display: flex;
   font-size: 1.6rem;
-  margin: 4.9rem 0 1.2rem;
+  padding: 4.9rem 0 1.2rem;
   justify-content: center;
   align-items: center;
+  background-color: #fff;
 }
 .searchBar > * {
   margin-left: 2rem;
